infrastructure/configs/base/ingress-traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.10.8.10.80.traefik.me`)
      services:
        - kind: TraefikService
          name: api@internal
